Fixed home/about section overlap on mobile & added margin to home section to improve spacing on tablet

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,6 +108,7 @@ h3 {
     justify-content: center;
     padding-left: 8vw;
     padding-top: 60vh;
+    margin-bottom: 5px;
 }
 
 .home-title h3 {
